[project]
name = "ai-camp-energy-2026"
version = "0.1.0"
description = "蒙西电网节点电价预测与储能充放电策略优化"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
